feat: flight partial date form entry
